Sandbox application.conf

--- a/airline-data/src/main/resources/application.conf
+++ b/airline-data/src/main/resources/application.conf
@@ -1,4 +1,4 @@
-websocketActorSystem {
+	websocketActorSystem {
 	pekko {
 		actor {
 			provider = remote
@@ -22,4 +22,11 @@ websocketActorSystem {
 	}
 }
 
-dev=false
+dev=true
+
+mysqldb {
+    host = "localhost:3306"
+    schema = "airline"
+    user = "mfc"
+    password = "V5xY7n8yrTeWcgHj"
+}
