--- a/airline-web/conf/application.conf
+++ b/airline-web/conf/application.conf
@@ -8,8 +8,8 @@
 # This must be changed for production, but we recommend not changing it in this file.
 #
 # See http://www.playframework.com/documentation/latest/ApplicationSecret for more details.
-play.crypto.secret = "changeme"
-play.http.secret.key = "changeme"
+play.crypto.secret = "36f7c2a6-0eef-4f80-b8b9-bd7d5eb26ec5"
+play.http.secret.key = "8c5b75ba-af2b-4805-b9e6-32ae0cab04a7"
 
 
 # The application languages
@@ -32,10 +32,15 @@ play.i18n.langs = [ "en" ]
 # You can declare as many datasources as you want.
 # By convention, the default datasource is named `default`
 #
-# db.default.driver=org.h2.Driver
-# db.default.url="jdbc:h2:mem:play"
-# db.default.username=sa
-# db.default.password=""
+
+dev=true
+
+mysqldb {
+    host = "localhost:3306"
+    schema = "airline"
+    user = "mfc"
+    password = "V5xY7n8yrTeWcgHj"
+}
 
 # Evolutions
 # ~~~~~
